# Onlineanalyze-app

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
