[package]
name = "onlineanalyze-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Conditional dependencies for the native build
[target.'cfg(target_arch = "x86_64")'.dependencies]
tauri-utils = { version = "2.8.1", default-features = false }
tauri-plugin-opener = "2.5.2"

# Conditional dependencies for wasm builds (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
tauri-utils = { version = "2.8.1", default-features = false, optional = true }
tauri-plugin-opener = { version = "2.5.2", optional = true }

[workspace]
members = ["src-tauri"]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug = false
