[package]
name = "onlineanalyze"
version = "0.1.0"
description = "A Tauri App"
authors = ["yourname"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "onlineanalyze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
tokio = { version = "1.48.0", features = ["sync", "macros", "io-util", "rt", "time"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
open = { version = "5.3.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
open = { version = "5.3.3", optional = false }
